pref(preferences): 服务器监控数据获取的优化